# blank

./: .gitignore  .gitmodules  CMakeLists.txt  Entry.cpp  Entry.h  README.md  Shader.cpp  Shader.h  main.cpp  settings.json
assets/: settings.json
example/: main.cpp
shaders/: default-frag.glsl  default-vert.glsl
src/: Blank.cpp  Blank.h  Entry.cpp  Entry.h  IManager.h  ITreeStructure.h  MouseEvent.h  ResourceManager.h  Settings.cpp  Settings.h  Shader.cpp  Shader.h  main.cpp
src/Component/: IComponent.h  InputMouse.cpp  InputMouse.h  Physics.cpp  Physics.h  Transform.cpp  Transform.h
src/Engine/: Engine.cpp
src/GUI/: Button.cpp  Button.h  Color.cpp  Color.h  Component.cpp  Component.h  Font.cpp  Font.h  IInputMouse.cpp  IInputMouse.h  ITreeStructure.cpp  ITreeStructure.h  Label.cpp  Label.h  Texture.cpp  Texture.h  UIComponent.cpp  UIComponent.h
src/Game/: Game.cpp
src/GameObject/: GameObject.cpp  GameObject.h
src/Keyboard/: KeyboardEvent.hpp  KeyboardKey.hpp  KeyboardManager.cpp  KeyboardManager.hpp
src/Mouse/: Mouse.cpp  Mouse.h  MouseEvent.h  MouseKey.hpp  MouseManager.cpp  MouseManager.h
src/Physics/: PhysicsManager.cpp  PhysicsManager.h
src/Scene/: IScene.h  SceneManager.cpp  SceneManager.h
src/Utility/: Vector2f.cpp  Vector2f.h  Vector3f.cpp  Vector3f.h
